--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,11 @@ dependencies {
     //kafka dependecies
     compile group: 'org.apache.kafka', name: 'kafka-clients', version: '0.10.1.1'
     compile group: 'org.apache.kafka', name: 'kafka_2.11', version: '0.10.1.1'
+    
+    //Cassandra dependecies
+    compile group: 'com.datastax.cassandra', name: 'cassandra-driver-core', version: '3.1.3'
+    compile group: 'com.datastax.cassandra', name: 'cassandra-driver-mapping', version: '3.1.3'
+    compile group: 'com.datastax.cassandra', name: 'cassandra-driver-extras', version: '3.1.3'
     //logback & slf4j
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
     compile 'org.slf4j:slf4j-api:1.7.21'
